Fixing an overflow issue with the header.

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -101,6 +101,7 @@ header.bk-header {
 	
 	@media @tablet {
 		height: auto;
+		min-height: 100px;
 	}
 }
 
@@ -151,6 +152,10 @@ header.bk-header {
 			.crop span.inner {
 				background-size: cover;
 			}
+		}
+		
+		.slideshow-widget-controls {
+		    display: none;
 		}
 	}
 }
@@ -681,4 +686,3 @@ footer.bk-footer .widget.profile form {
 .responsivecolumns .columns-two-left, .columns-two-50-50 .columns-two-left {
 	margin-bottom: 0;
 }
-
